# home-assistant-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DASHBOARDS.md  README.md  SKILLS.md  create_salon_dashboard.py  get_entities.sh  get_entity.sh  get_services.sh  health_check.sh  install-mcp-builder-skill.sh  main.py  manage_dashboards.py  pyproject.toml  test-skill-usage.sh  verify-skill.sh
.agent/rules/: code-rules.md  repository-rules.md  test-rules.md
.agent/workflows/: create-component.md  manage-dependencies.md  run-tests.md  sync-artifacts.md
src/ha_mcp_server/: client.py  models.py  server.py
src/home_assistant_mcp/: __init__.py  config.py  server.py
src/home_assistant_mcp/tools/: __init__.py  ha_call_service.py  ha_create_dashboard.py  ha_delete_dashboard.py  ha_fire_event.py  ha_get_area_devices.py  ha_get_area_entities.py  ha_get_config.py  ha_get_dashboard.py  ha_get_entity_area.py  ha_get_entity_state.py  ha_get_history.py  ha_health_check.py  ha_list_areas.py  ha_list_dashboards.py  ha_list_entities.py  ha_list_services.py  ha_render_template.py  ha_toggle.py  ha_turn_off.py  ha_turn_on.py  ha_update_dashboard.py  utils.py
tests/: conftest.py
tests/integration/: __init__.py  test_server.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_models.py  test_server.py
tests/unit/tools/: __init__.py  test_ha_call_service.py  test_ha_create_dashboard.py  test_ha_delete_dashboard.py  test_ha_fire_event.py  test_ha_get_area_devices.py  test_ha_get_area_entities.py  test_ha_get_config.py  test_ha_get_dashboard.py  test_ha_get_entity_area.py  test_ha_get_entity_state.py  test_ha_get_history.py  (+11 more)
